src/index.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
@import "@fontsource-variable/jetbrains-mono";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --font-heading: var(--font-mono);
    --font-mono: 'JetBrains Mono Variable', monospace;
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --color-foreground: var(--foreground);
    --color-background: var(--background);
    --radius-sm: calc(var(--radius) * 0.6);
    --radius-md: calc(var(--radius) * 0.8);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) * 1.4);
    --radius-2xl: calc(var(--radius) * 1.8);
    --radius-3xl: calc(var(--radius) * 2.2);
    --radius-4xl: calc(var(--radius) * 2.6);
}

:root {
    --background: oklch(1 0 0);
    --foreground: oklch(0.147 0.004 49.3);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.147 0.004 49.3);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.147 0.004 49.3);
    --primary: oklch(0.491 0.27 292.581);
    --primary-foreground: oklch(0.969 0.016 293.756);
    --secondary: oklch(0.967 0.001 286.375);
    --secondary-foreground: oklch(0.21 0.006 285.885);
    --muted: oklch(0.96 0.002 17.2);
    --muted-foreground: oklch(0.547 0.021 43.1);
    --accent: oklch(0.96 0.002 17.2);
    --accent-foreground: oklch(0.214 0.009 43.1);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.922 0.005 34.3);
    --input: oklch(0.922 0.005 34.3);
    --ring: oklch(0.714 0.014 41.2);
    --chart-1: oklch(0.897 0.196 126.665);
    --chart-2: oklch(0.768 0.233 130.85);
    --chart-3: oklch(0.648 0.2 131.684);
    --chart-4: oklch(0.532 0.157 131.589);
    --chart-5: oklch(0.453 0.124 130.933);
    --radius: 0;
    --sidebar: oklch(0.986 0.002 67.8);
    --sidebar-foreground: oklch(0.147 0.004 49.3);
    --sidebar-primary: oklch(0.541 0.281 293.009);
    --sidebar-primary-foreground: oklch(0.969 0.016 293.756);
    --sidebar-accent: oklch(0.96 0.002 17.2);
    --sidebar-accent-foreground: oklch(0.214 0.009 43.1);
    --sidebar-border: oklch(0.922 0.005 34.3);
    --sidebar-ring: oklch(0.714 0.014 41.2);
}

.dark {
    --background: oklch(0.147 0.004 49.3);
    --foreground: oklch(0.986 0.002 67.8);
    --card: oklch(0.214 0.009 43.1);
    --card-foreground: oklch(0.986 0.002 67.8);
    --popover: oklch(0.214 0.009 43.1);
    --popover-foreground: oklch(0.986 0.002 67.8);
    --primary: oklch(0.432 0.232 292.759);
    --primary-foreground: oklch(0.969 0.016 293.756);
    --secondary: oklch(0.274 0.006 286.033);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.268 0.011 36.5);
    --muted-foreground: oklch(0.714 0.014 41.2);
    --accent: oklch(0.268 0.011 36.5);
    --accent-foreground: oklch(0.986 0.002 67.8);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.547 0.021 43.1);
    --chart-1: oklch(0.897 0.196 126.665);
    --chart-2: oklch(0.768 0.233 130.85);
    --chart-3: oklch(0.648 0.2 131.684);
    --chart-4: oklch(0.532 0.157 131.589);
    --chart-5: oklch(0.453 0.124 130.933);
    --sidebar: oklch(0.214 0.009 43.1);
    --sidebar-foreground: oklch(0.986 0.002 67.8);
    --sidebar-primary: oklch(0.606 0.25 292.717);
    --sidebar-primary-foreground: oklch(0.969 0.016 293.756);
    --sidebar-accent: oklch(0.268 0.011 36.5);
    --sidebar-accent-foreground: oklch(0.986 0.002 67.8);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.547 0.021 43.1);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
    }
  body {
    @apply bg-background text-foreground;
    }
  html {
    @apply font-mono;
    }
}

